templates/sas-bases/overlays/network/networking.k8s.io/v1/ingress/components/sas-job-execution/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jobDefinitions/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /jobDefinitions/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-job-definitions
    sas.com/admin: namespace
  name: sas-job-definitions
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-job-definitions
            port:
              number: 80
        path: /jobDefinitions(/|$)(.*)
        pathType: Prefix
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-job-definitions
            port:
              number: 80
        path: /jobDefinitions(/|$)(.*)
        pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jobExecution/$2
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /jobExecution/
    nginx.ingress.kubernetes.io/session-cookie-samesite: Lax
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-job-execution
    sas.com/admin: namespace
  name: sas-job-execution
spec:
  ingressClassName: nginx
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          service:
            name: sas-job-execution
            port:
              number: 80
        path: /jobExecution(/|$)(.*)
        pathType: Prefix
  - host: '*.$(INGRESS_HOST)'
    http:
      paths:
      - backend:
          service:
            name: sas-job-execution
            port:
              number: 80
        path: /jobExecution(/|$)(.*)
        pathType: Prefix
